# netify-plugin-stats

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
deploy/openwrt/: Makefile
deploy/openwrt/files/etc/config/: netify-stats
deploy/openwrt/files/etc/netifyd/plugins.d/: 90-netify-plugin-stats.conf
deploy/openwrt/files/etc/uci-defaults/: 90-netify-plugin-stats
deploy/openwrt/files/usr/libexec/rpcd/: luci.netify-stats
deploy/openwrt/files/usr/share/netifyd/plugins.d/: 90-netify-plugin-stats.conf
deploy/openwrt/files/usr/share/rpcd/acl.d/: luci-netify-stats.json
include/: nsp-accum.hpp  nsp-config.hpp  nsp-plugin.hpp  nsp-query.hpp  nsp-store.hpp
scripts/: remote-build.sh  sdk-build.sh
src/: Makefile.am  nsp-accum.cpp  nsp-config-uci.cpp  nsp-config.cpp  nsp-plugin.cpp  nsp-query-build.cpp  nsp-query.cpp  nsp-store.cpp
tests/: Makefile.am
tests/integration/: query_driver.cpp  seed_store.cpp  test_query.sh
tests/unit/: test_accum.cpp  test_config.cpp  test_query.cpp  test_smoke.cpp  test_store.cpp
